# the-12-barcodes-api

./: .env.example  .gitignore  LICENSE.txt  README.md  app.py  pyproject.toml  requirements.txt
barcodes_api_dev/: __init__.py  app.py  db.py  schemas.py
barcodes_api_dev/controllers/: __init__.py  barcode.py  ean_eight.py  ean_one_four.py  ean_one_three.py  gs_one_one_two_eight.py  isbn_one_three.py  isbn_ten.py  issn.py  jan.py  one_three_eight.py  one_two_eight.py  pzn_seven.py  three_nine.py  upc.py  upc_a.py
barcodes_api_dev/drivers/: __init__.py  barcode_handler.py  isbn_ten_handler.py  one_three_eight_handler.py  one_two_eight_handler.py  pzn_seven_handler.py  upc_handler.py
barcodes_api_dev/models/: __init__.py  ean_eight_model.py  ean_one_four_model.py  ean_one_three_model.py  gs_one_one_two_eight_model.py  isbn_one_three_model.py  isbn_ten_model.py  issn_model.py  jan_model.py  one_two_eight_model.py  pzn_seven_model.py  three_nine_model.py  upc_a_model.py
barcodes_api_dev/resources/: barcode.py  ean_eight.py  ean_one_four.py  (+10 more)
controllers/: __init__.py  ean_eight.py  ean_one_four.py  ean_one_three.py  gs_one_one_two_eight.py  isbn_one_three.py  isbn_ten.py  issn.py  jan.py  one_two_eight.py  pzn_seven.py  three_nine.py  upc_a.py
models/: gs_one_one_two_eight_model.py  isbn_ten_model.py  jan_model.py  one_two_eight_model.py  upc_a_model.py
templates/: index.html
views/: ean_eight.py  ean_one_four.py  ean_one_three.py  gs_one_one_two_eight.py  isbn_one_three.py  isbn_ten.py  issn.py  jan.py  one_two_eight.py  pzn_seven.py  three_nine.py  upc_a.py
(+32 files in other folders)
